# GPG-drive

./: .gitignore  LICENSE  index.html  pyproject.toml  readme.md  requirements.txt
environments/: racetrack.py
environments/racetrack/: centerline.mat  outerborder.txt  shortest_reference.txt  shortest_reference_Nseg.mat
examples/: merging_scenario_paper.py  one_dimensional_gpg.py  overtaking_scenario.py  racetrack.py
local_wheels/: panocpy-0.0.2-cp39-cp39-win_amd64.whl
resources/: bibtex.txt
src/: boundingbox.py  car.py  collision.py  constraints.py  dynamics.py  experiment.py  feature.py  gaussseidelsolver.py  lagrangiansolver.py  lane.py  learning.py  logger.py  penalty.py  player.py  scene.py  settings.py  solvers.py  trajectory.py  visualize.py  visualize_data.py  world.py
src/GPGdrive/: __init__.py  car.py  collision.py  dataloader.py  experiment.py  feature.py  gaussseidelsolver.py  lagrangiansolver.py  lane.py  learning.py  logger.py  penalty.py  player.py  scene.py  settings.py  solvers.py  trajectory.py  visualize.py  world.py
src/GPGdrive/environments/: racetrack.py
src/GPGdrive/environments/racetrack/: center_reference2.txt  center_referenceRef.txt  center_reference_Nseg.mat  center_reference_Nseg2.mat  curvature_reference.txt  curvature_reference_Nseg.mat  innerborder.txt  optimal_reference.txt  optimal_reference_Nseg.mat
src/GPGdrive/helpers/: tree_generator.py
src/GPGdrive/triangulation/earcut/: earcut.py
src/helpers/: visualize_helpers.py
theme/: theme.json
